--- a/comp4513-w2023-react2/starting_files/src/index.css
+++ b/comp4513-w2023-react2/starting_files/src/index.css
@@ -17,6 +17,7 @@
   --button-back: #3aafa9;
   --border-color: #c2dde6;
   --list-box-back: #feffff;
+  --popover-back: hsl(177,43%,95%);
 }
 
 body {
@@ -182,4 +183,53 @@ legend {
 .banner div {
   display: inline-block;
   margin-top: 200px;
+}
+
+
+
+/* popover styling inspired by https://codepen.io/chocochip/pen/zYxMgRG */
+
+.item_wrapper {
+  position: relative;
+  margin-top: 1.5rem;
+  display: inline-block;
+}
+
+.popover_content {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  left: 0px;
+  transform: translate(0, 10px);
+  background-color: var(--popover-back);
+  padding: 1.5rem;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+
+}
+.popover_content:before {
+  position: absolute;
+  z-index: -1;
+  content: "";
+  right: calc(50% - 10px);
+  top: -8px;
+  border-style: solid;
+  border-width: 0 10px 10px 10px;
+  border-color: transparent transparent var(--popover-back) transparent;
+  transition-duration: 0.3s;
+  transition-property: transform;
+}
+.item_wrapper:hover .popover_content {
+  z-index: 10;
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0, -50px);
+  transition: all 0.5s cubic-bezier(0.75, -0.02, 0.2, 0.97);
+}
+
+.popover_button {
+   cursor: pointer;
+}
+
+button:hover{
+  cursor: pointer;
 }
